java.sourceCompatibility = JavaVersion.VERSION_21
